23_power_rec/grade.txt
Grading at Fri Mar 22 07:48:59 UTC 2019
Attempting to compile power.c
In file included from power.c:3:0:
power.c: In function ‘power_helper’:
power.c:9:10: error: ‘a’ undeclared (first use in this function)
   assert(a >= 0 && x < 42996729 && y > 0 && y < 4294967296);
          ^
power.c:9:10: note: each undeclared identifier is reported only once for each function it appears in
The code did not compile!

Overall Grade: F
